--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,47 @@
 			</ul>
 		</div>
 	</div>
-        <div class="module-archives module">
+
+	<div class="module-archives module">
+		<h2 class="module-header">@luanews</h2>
+		<div class="module-content">
+	
+	<script src="http://widgets.twimg.com/j/2/widget.js"></script>
+<script>
+new TWTR.Widget({
+  version: 2,
+  type: 'profile',
+  rpp: 4,
+  interval: 6000,
+  width: 150,
+  height: 300,
+  theme: {
+    shell: {
+      background: '#ffffff',
+      color: '#000000'
+    },
+    tweets: {
+      background: '#ffffff',
+      color: '#000000',
+      links: '#eb071a'
+    }
+  },
+  features: {
+    scrollbar: false,
+    loop: false,
+    live: true,
+    hashtags: true,
+    timestamp: true,
+    avatars: false,
+    behavior: 'all'
+  }
+}).render().setUser('luanews').start();
+</script>
+
+		</div>
+	</div>
+		  
+	<div class="module-archives module">
 		<h2 class="module-header" id="noborder"><a href="/archives.html">Archives</a></h2>
        </div>
         <div class="module-syndicate module">
