tweaking twitter widget

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,9 +54,9 @@
 new TWTR.Widget({
   version: 2,
   type: 'profile',
-  rpp: 4,
+  rpp: 3,
   interval: 6000,
-  width: 150,
+  width: 'auto',
   height: 300,
   theme: {
     shell: {
