tweaking twitter widget

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,12 +61,12 @@ new TWTR.Widget({
   theme: {
     shell: {
       background: '#ffffff',
-      color: '#000000'
+      color: '#333000'
     },
     tweets: {
       background: '#ffffff',
-      color: '#000000',
-      links: '#eb071a'
+      color: '#333000',
+      links: '#ab0404'
     }
   },
   features: {
