new post, pygments stylesheet

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
    <link rel="stylesheet" href="/styles/base_styles.css" type="text/css" />
    <link rel="stylesheet" href="/styles/theme_styles.css" type="text/css" />
+   <link rel="stylesheet" href="/styles/syntax.css" type="text/css" />
    <link rel="alternate" type="application/atom+xml" title="Atom" href="/atom.xml" />
    <title>
     {{ site.title }}
