fixed individual post pages

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
 <div class="entry">
     <div class="entry-content">
         <div class="entry-body">
-	  {{ page.content }}
+	  {{ content }}
         </div>
     </div>
     <div class="entry-footer">
